DTS-45930: Reopen rate kpi fetch all defects of project
Change-log:Defect reopen rate as trend KPI in Quality board.